# inspect_flow

./: .gitignore  .nojekyll  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.html  CHANGELOG.html.md  CHANGELOG.html.md.sha  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  advanced.html  advanced.html.md  advanced.html.md.sha  data.json  defaults.html  defaults.html.md  defaults.html.md.sha  defaults_overrides.html  dependencies.html  flow_concepts.html  flow_concepts.html.md  flow_concepts.html.md.sha  index.html  index.html.md  index.html.md.sha  inheritance.html  llms-full.txt  llms-guide.txt  llms.txt  matrix.html  matrix.html.md  matrix.html.md.sha  pyproject.toml  pyproject.toml.orig  python.html  robots.txt  run.html  run.html.md  (+13 more)
.github/: CODEOWNERS
design/: after_instantiate.md  parallel_instantiation.md  steps.md  store_filters.md
docs/: _quarto.yml  advanced.qmd  config_basics.qmd  core_concepts.qmd  defaults.qmd  defaults_overrides.qmd  dependencies.qmd  flow_concepts.qmd  index.qmd  inheritance.qmd  jinja2.xml  llms.txt  matrix.qmd  parameter_sweep.qmd  run.qmd  spec.qmd  steps.qmd  store.qmd  theme.scss  tutorial.qmd  usage.qmd
examples/: agent_flow.py  agents_matrix.py  agents_with.py  bundle_url_map.py  config.py  config_merge_flow.yaml  configs_matrix.py  configs_with.py  default_config_flow.py  dependencies.py  direct_task_object.py  e2e_test_flow.py  e2e_test_flow.yaml  extra_args_priority.py  first_config.py  first_config.yml  flow_args.py  flow_defaults.py  flow_metadata.py  flow_vars.py  hierarchy.py  includes.py  inheritance_root_config.py  inheritance_subdir_config.py  inproc_mode.py  inspect_action_sample_flow.py  invalid_flow.py  local.eval-set.yaml  matrix.py  matrix.yml  matrix_and_task_flow.yaml  matrix_and_with.py  merge_none_flow_task.py  merge_none_generate_config.py  metadata.py  model_and_task2_flow.py  model_and_task_flow.py  model_and_task_flow.yaml  model_config_flow.yaml  model_configs.py  (+24 more)
examples/local_eval/: pyproject.toml
examples/local_eval/src/local_eval/: _registry.py  coconot.py  noop.py  three_tasks.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_012b676e5f77d343_auto_dependencies_py.html  z_012b676e5f77d343_freeze_py.html  z_012b676e5f77d343_inproc_py.html  z_012b676e5f77d343_launch_py.html  z_012b676e5f77d343_pip_string_py.html  z_012b676e5f77d343_python_version_py.html  z_012b676e5f77d343_venv_py.html  z_22a877734f146b6b___init___py.html  z_22a877734f146b6b_context_py.html  z_22a877734f146b6b_copy_py.html  z_22a877734f146b6b_run_py.html  z_22a877734f146b6b_scan_options_py.html  (+63 more)
tests/local_eval/: pyproject.toml  requirements.txt
tests/local_eval/flow/: local_eval_flow.py  local_eval_flow_requirements.py
tests/local_eval/src/local_eval/: __init__.py  _registry.py  agent.py  agentic.py  my_filters.py  my_scanners.py  noop.py  simple.py  task_with_hook.py  tools.py
(+342 files in other folders)
