src = ["src"]

[project]
name = "local_eval"
dynamic = ["version"]
description = "Example local evaluation project to demonstrate and test Insepct Flow functionality"
authors = [{ name = "Meridian Labs" }]
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.2.0,<4.0.0",
    "inspect-ai>=0.3.131",
    "python-dotenv>=1.1.1",
    "typing_extensions>=4.9.0",
]

[project.entry-points.inspect_ai]
local_eval = "local_eval.noop"
