[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "local_eval"
version = "0.1.0"
description = "Example local evaluation project to demonstrate and test Inspect Flow functionality"
authors = [{ name = "Meridian Labs" }]
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.131",
    "python-dotenv>=1.1.1",
    "typing_extensions>=4.9.0",
]

[project.entry-points.inspect_ai]
local_eval = "local_eval.noop"

[tool.uv]
package = true
